foundation-objs/main/default/objects/Team_Responsible_SF_Jira__mdt/Team_Responsible_SF_Jira__mdt.object-meta.xml
<CustomObject>
    <label>Team Responsible SF &lt;&gt; Jira</label>
    <pluralLabel>Team Responsible SF &lt;&gt; Jira</pluralLabel>
</CustomObject>