foundation-objs/main/default/objects/Team_Responsible_SF_Jira__mdt/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <label>Assignee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>