foundation-objs/main/default/objects/Team_Responsible_SF_Jira__mdt/fields/Assignee_Name__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Name__c</fullName>
    <label>Assignee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>