foundation-objs/main/default/objects/Team_Responsible_SF_Jira__mdt/fields/Team_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Team_Responsible__c</fullName>
    <label>Team Responsible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>