foundation-objs/main/default/objects/Team_Responsible_SF_Jira__mdt/listViews/SF_JIRA.listView-meta.xml
<ListView>
    <fullName>SF_JIRA</fullName>
    <columns>MasterLabel</columns>
    <columns>Team_Responsible__c</columns>
    <columns>Project_Code__c</columns>
    <columns>Assignee__c</columns>
    <columns>Assignee_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>SF &lt;&gt; JIRA</label>
</ListView>